fix deps and compilation issues